--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <h1><img src="https://sdsavto.ru/system/product_photo_package/SDSEXCLUSIVE/VRC943.jpg"Width="35px" height="35px"</>Какие танки качать или <font color="#ddf74a">купить</font></h1>
     </header>
     <nav>
-        <a href="">Хорошие игры</a>
+        <a href="https://yura4014.github.io/good-_games/">Хорошие игры</a>
         <a href="">Super</a>
         <a href="#Hju">World of Tanks </a>
         <a href="#Hju1">Контакты</a>
