--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header >
             <img id="Hju1" class="Njv" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg"Width="35px" height="35px">
-                <a href="">Хорошие игры</a>
+                <a href="">Хорошие танки</a>
             <a href="">Steam</a>
             <a href="#Hju">4 Игра</a>
             <a href="#Hju2">5 Игра</a>
