--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <header >
             <img id="Hju1" class="Njv" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg"Width="35px" height="35px">
+                <a href="https://yura4014.github.io/good-_games/">Хорошие игры</a>
                 <a href="">Хорошие танки</a>
             <a href="">Steam</a>
             <a href="#Hju">4 Игра</a>
