--- a/index3.html
+++ b/index3.html
@@ -5,8 +5,9 @@
     </head>
     <header >
             <img id="Hju1" class="Njv" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg"Width="35px" height="35px">
+             <a href="index3.html">Steam</a>
                 <a href="https://yura4014.github.io/good-_games/">Хорошие игры</a>
-            <a href="">Хорошие танки</a>
+            <a href="index2.html">Хорошие танки</a>
             <a href="#Hju">4 Игра</a>
             <a href="#Hju2">5 Игра</a>
            <a href="#Hju3">6 Игра</a>
