--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <title>Крутые танки</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     </head>
     <body>
 <header >
