--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <html>
         <head>
     <title>Крутые в Steam</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
     </head>
     <header >
             <img id="Hju1" class="Njv" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg"Width="35px" height="35px">
