--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
         <head>
     <title>Крутые игры</title>
     <link rel="stylesheet" href="style.css">
+                <meta name="google-site-verification" content="947jh_zTQJ-m3VBcI5crLZN4LCdNM3Ty0OrNkgJ23qs" />
     </head>
     <body>
         <header >
